# Smart-Distance-Logger-Display-ESP32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old  system_flow_diagram.md
Extension/: CODE_REVIEW_FIXES.md  README_BINARY_DATA.md  README_ESP32C3_WIFI.md  README_HARDWARE.md  README_TASKS.md
components/esp32c3_wifi/: CMakeLists.txt  esp32c3_wifi.c
components/esp32c3_wifi/include/: esp32c3_wifi.h
components/http_server_app/: CMakeLists.txt  http_server_app.c
components/http_server_app/include/: http_server_app.h
components/oled_driver/: CMakeLists.txt  oled_driver.c
components/oled_driver/include/: oled_driver.h
components/sd_card_spi/: CMakeLists.txt  sd_card_spi.c
components/sd_card_spi/include/: sd_card_spi.h
components/ultrasonic_sensor/: CMakeLists.txt  ultrasonic_sensor.c
components/ultrasonic_sensor/include/: ultrasonic_sensor.h
main/: CMakeLists.txt  Kconfig.projbuild  Smart_Embed.c  index.html
